# build

./: .gitignore  Makefile.am  README  bootup.txt  build-initrd.sh  configure.ac  install-debian.sh  install-fedora.sh  test-init.sh
src/: build-efi-disk.sh  build-initrd.sh  build-raspberrypi-disk.sh  disk-build-raspberrypi.sh  initrd-build.sh  install-archlinux.sh  install-debian.sh  install-fedora.sh  install-raspberrypi.sh  system-install-archlinux.sh  system-install-raspberrypi.sh  test-init.sh  test-initrd.sh  test-sysimage.sh
